// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: IconPicker ui with label 1`] = `
<div>
  <div
    class="search-input"
  >
    <div
      class="icon-picker mb-3"
      color="success"
    >
      <label
        class="form-label"
      >
        Best Friend
      </label>
      <div
        class="d-flex"
      >
        <button
          aria-describedby="bestFriend"
          class="btn btn-primary"
          type="button"
        >
          Select your best friend
        </button>
      </div>
      Some error
    </div>
  </div>
</div>
`;

exports[`Component: IconPicker ui with selected value 1`] = `
<div>
  <div
    class="search-input"
  >
    <div
      class="icon-picker mb-3"
      color="success"
    >
      <div
        class="d-flex"
      >
        <div
          class="d-flex justify-content-between"
        >
          <i
            class="icon pt-2 me-3 material-icons"
            id="icon-picker-value"
          >
            3d_rotation
          </i>
          <u
            class="align-self-center clickable fw-lighter me-3"
            role="button"
          >
            Clear
          </u>
        </div>
        <button
          aria-describedby="1"
          class="btn btn-primary"
          type="button"
        >
          Select your best friend
        </button>
      </div>
      Some error
    </div>
  </div>
</div>
`;

exports[`Component: IconPicker ui without selected value 1`] = `
<div>
  <div
    class="search-input"
  >
    <div
      class="icon-picker mb-3"
      color="success"
    >
      <div
        class="d-flex"
      >
        <button
          aria-describedby="3"
          class="btn btn-primary"
          type="button"
        >
          Select your best friend
        </button>
      </div>
      Some error
    </div>
  </div>
</div>
`;
